CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_STANDARD 11)

#SET(CMAKE_CXX_FLAGS "-Wall")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

PROJECT(SimpleSQL)

INCLUDE_DIRECTORIES(src/backend/include)

ADD_SUBDIRECTORY(src/backend)
ADD_SUBDIRECTORY(src/parser)
ADD_SUBDIRECTORY(src/team_c_api)
